# QinDB

./: .gitignore  CMakeLists.txt  LICENSE  PROGRESS.md  README.md  THIRD_PARTY_NOTICES  main.cpp  qindb.ini  test_auth.db  test_catalog.db  test_hash_index.db  test_txn.db  testres.txt
docs/: USER_MANUAL.md
include/qindb/: argon2id.h  ast.h  auth_manager.h  bplus_tree.h  buffer_pool_manager.h  catalog.h  catalog_db_backend.h  certificate_generator.h  client_connection.h  client_manager.h  common.h  composite_index.h  composite_key.h  config.h  connection_string_parser.h  cost_model.h  cost_optimizer.h  database_manager.h  disk_manager.h  executor.h  expression_evaluator.h  fingerprint_manager.h  generic_bplustree.h  hash_bucket_page.h  hash_index.h  inverted_index.h  key_comparator.h  lexer.h  logger.h  message_codec.h  page.h  parser.h  password_hasher.h  permission_manager.h  protocol.h  query_cache.h  query_result.h  query_rewriter.h  result_exporter.h  row_id_index.h  (+17 more)
src/auth/: argon2id.cpp  auth_manager.cpp  password_hasher.cpp  permission_manager.cpp
src/cache/: query_cache.cpp  table_cache.cpp
src/catalog/: catalog.cpp  catalog_db_backend.cpp  database_manager.cpp
src/core/: config.cpp
src/executor/: executor.cpp  expression_evaluator.cpp
src/index/: bplus_tree.cpp  composite_index.cpp  composite_key.cpp  generic_bplustree.cpp  hash_bucket_page.cpp  hash_index.cpp  inverted_index.cpp  key_comparator.cpp  tokenizer.cpp
src/network/: certificate_generator.cpp  client_connection.cpp  client_manager.cpp  connection_string_parser.cpp  fingerprint_manager.cpp  message_codec.cpp  server.cpp  sslError_handler.cpp  tls_config.cpp  tls_handshake_manager.cpp  tls_socket_factory.cpp
src/optimizer/: cost_model.cpp  cost_optimizer.cpp  cost_optimizer.cpp.bak  query_rewriter.cpp  statistics.cpp
src/parser/: ast.cpp  lexer.cpp  parser.cpp
src/storage/: buffer_pool_manager.cpp  disk_manager.cpp  page.cpp  row_id_index.cpp  table_page.cpp  transaction.cpp  type_serializer.cpp  undo_log.cpp  vacuum.cpp  visibility_checker.cpp  wal.cpp  wal_db_backend.cpp
src/utils/: logger.cpp  result_exporter.cpp
test_executor_db/: databases.json
test_executor_db/testdb/: catalog.json  qindb.db
tests/: CMakeLists.txt  benchmark_bplustree.cpp  benchmark_buffer_pool.cpp  benchmark_framework.h  benchmark_main.cpp  test_argon2id.cpp  test_auth_permission.cpp  test_bplustree.cpp  test_buffer_pool.cpp  test_catalog.cpp  test_connection_string.cpp  test_debug_bptree.cpp  test_executor.cpp  test_framework.cpp  test_framework.h  test_hash_index.cpp  test_ip_whitelist.cpp  test_lexer.cpp  test_main.cpp  test_parser.cpp  test_query_cache.cpp  test_result_exporter.cpp  test_specific_keys.cpp  test_ssl_error_handler.cpp  test_tls_handshake.cpp  test_tls_handshake_simple.cpp  test_transaction.cpp
